# oracle-data-export

./: .gitignore  README.md  pyproject.toml
scripts/: export_example.py
src/oracle_data_export/: __init__.py  env.py  main.py
